Gerhards fix for vertex2normal on CUDA API level 2.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ include_directories(
 
 #set(CUDA_NVCC_FLAGS "-arch=sm_12")
 
+
+#set(CUDA_NVCC_FLAGS "-arch=sm_12")
+
 find_package(CUDA REQUIRED)
 find_package(Freenect)
 find_package(GLUT)
