added correct include path for TooN and define GL_GLEXT_PROTOTYPES to get OpenGL 1.5 prototypes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 include_directories(
 	${CMAKE_BINARY_DIR}/include
-	dep
+	thirdparty
 )
 
 find_package(CUDA REQUIRED)
