Somewhat working version for Windows and OpenNI2
- new TooN version using proper includes
- WiP for OpenNI2
- works incorrect in terms of double buffering

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "thirdparty/TooN"]
 	path = thirdparty/TooN
-	url = git://github.com/edrosten/TooN.git
+	url = git://github.com/seichter/TooN.git
